# vcio-mvp

./: README.md  app.py  pyproject.toml
questions/: accountability.json  fairness.json  privacy.json  reliability.json  transparency.json
